# VisCy

./: .codecov.yml  .envrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  2.5D_solution.ipynb  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile.imaging_docker_py35_cu80  Dockerfile.imaging_docker_py36_cu90  Dockerfile.imaging_powerai_154  Dockerfile.imaging_powerai_160  Dockerfile.microDL_py36_cu90  LICENSE  README.md  calc_prediction_metric.py  conda_environment.yml  debug_seg_masks.ipynb  predict_Unet21D_AR_adhoc.py  profile.out  pyproject.toml  requirements.txt  requirements_docker.txt  ruff.toml  run_Unet21D_AR_adhoc.py  setup_env_DLMBL21.sh  stable  stat_explore_notebook.ipynb  temp_solution.ipynb  torch_conda_env.yml  torch_conda_environment.yml  versions.json  zensical.toml
applications/airtable/: README.md  pyproject.toml
applications/airtable/configs/: prepare_config.yml
applications/airtable/scripts/: migrate_cell_line_2.py  migrate_channel_markers.py  write_experiment_metadata.py
applications/airtable/src/airtable_utils/: __init__.py  database.py  prepare.py  prepare_cli.py  registration.py  schemas.py
applications/airtable/tests/: conftest.py  test_database.py  test_register_fovs.py  test_schemas.py
applications/dynacell/: .gitignore  CLAUDE.md  README.md  fid.py  fid_ts.py  pyproject.toml  test_fid.sh  test_fid_ts.sh
applications/dynacell/configs/benchmarks/: A549_EXPANSION_ROADMAP.md  BENCHMARK_CONFIG_SCHEMA.md  DATASET_REF_RESOLVER_SPEC.md  UNEXT2_VS_FCMAE_CLASSES.md
applications/dynacell/configs/evaluate/: eval.yaml
applications/dynacell/configs/evaluations/: run_eval_celldiff.sh  run_eval_er.sh  run_eval_fnet.sh  run_eval_memb.sh  run_eval_mito.sh  run_eval_nucl.sh
applications/dynacell/configs/examples/: fcmae_hopper_slowdown.md
applications/dynacell/examples/hf_demo/: AGENT.md  upload_checkpoints.py  upload_hf_space.py
applications/dynacell/examples/notebooks/: get-to-know-dynacell-dataset.ipynb
applications/dynacell/hf_demo/: upload_checkpoints.py
applications/dynacell/hf_demo/hf_space/: app.py  predict_runner.py  requirements.txt
applications/dynacell/src/dynacell/: __init__.py  __main__.py  _compose_hook.py  celldiff_wrapper.py  engine.py
applications/dynacell/tests/: _eval_fixtures.py  conftest.py  generate_celldiff_trajectory.py  test_benchmark_config_composition.py  test_cli_routing.py  test_data_manifests.py  test_dataset_ref.py  test_engine.py  test_evaluate_compose.py  test_evaluation_cache.py  test_evaluation_cross_store_nuclei.py  test_evaluation_extractors.py  test_evaluation_grouped.py  test_evaluation_io.py  test_evaluation_metrics.py  test_evaluation_pipeline.py  test_evaluation_pipeline_parallel.py  test_evaluation_pipeline_parallel_cpu.py  test_evaluation_precompute_cli.py  test_focus.py  test_hydra_ref_hook.py  test_lazy_init.py  test_manifest_sync.py  test_pipeline_cache.py  test_pixel_metrics_parity.py  test_preprocess_config.py  test_preprocess_zarr_utils.py  test_reporting_figures.py  test_reporting_tables.py  test_reporting_tables_extended.py  test_runtime.py  test_save_paths.py  test_submit_benchmark_batch.py  test_submit_benchmark_job.py  test_training_integration.py
applications/dynacell/tests/data/: _generate_pixel_metrics_golden.py  pixel_metrics_golden.npz
applications/dynacell/tools/: __init__.py  add_instance_ap_to_ablation_leaves.py  evaluate_batch.sh  evaluate_local.sh  fuse_a549_dual_channel_zarr.py  generate_grouped_eval_configs.py  generate_grouped_eval_configs_test.py  generate_instance_ap_eval_configs.py  generate_instance_ap_eval_configs_test.py  handoff_resubmit_a549_only_fcmae.sh  make_carved_ablation_membrane_leaves.py  make_carved_membrane_leaves.py  nccl_smoke_test.py  predict_all_a549.sh  predict_batch.sh  predict_local.sh  predict_local_a549.sh  predict_local_ipsc.sh  recompute_fsc.py  rerun_all_evals.sh  run_ablations_focus.slurm  run_celldiff_r2_a549trained_evals.slurm  run_celldiff_r2_a549trained_evals_deferred.slurm  run_eval_direct.slurm  run_eval_jointtrained_nucleus.slurm  run_eval_unext2_jointtrained_membrane.slurm  run_eval_vscyto3d_a549trained.slurm  run_focus_campaign.slurm  run_instance_reeval.slurm  run_pix2pix3d_foldin_eval.slurm  run_reeval_campaign.slurm  run_reeval_celldino_regen.slurm  run_reeval_optimized.slurm  run_reeval_optimized_deferred.slurm  run_regen_microssim_leaves.slurm  run_regen_nucleus_gauss_wave1.slurm  run_regen_nucleus_gauss_wave2.slurm  save_random_init_vscyto3d_ckpts.py  sbatch_template.sbatch  sbatch_template_array.sbatch  (+12 more)
applications/dynacell/tools/LEGACY/: README.md
applications/dynacell/vae_3d/: vae_3d_config.py  vae_3d_model.py  vae_3d_model_ts.py
applications/dynacell/vae_3d/modules/: autoencoders.py  autoencoders_ts.py  blocks.py  decoder.py  encoder.py
applications/dynaclr/: CLAUDE.md  README.md  pyproject.toml
applications/dynaclr/configs/cell_index/: DynaCLR-2D-BagOfChannels-v3.parquet  example_cell_index.yaml
applications/dynaclr/configs/cellanome/: embed_all.sh  embed_dinov3.yml  embed_dynaclr.yml
applications/dynaclr/evaluation/: README.md
applications/dynaclr/nextflow/: README.md  main.nf  nextflow.config
applications/dynaclr/tests/: conftest.py  helpers.py  test_datamodule.py  test_dataset.py  test_embedding_snapshot.py  test_engine.py  test_experiment.py  test_flat_parquet_e2e.py  test_index.py  test_inference_reproducibility.py  test_linear_classifier.py  test_loss.py  test_mlp_embedder.py  test_mmd.py  test_multi_experiment_integration.py  test_pseudotime.py  test_reduce_dimensionality.py  test_tau_sampling.py  test_training_integration.py  test_valid_anchors_marker.py
applications/qc/: README.md  pyproject.toml  qc_config.yml
applications/qc/configs/: biological_n_experiment_meta.yml  focus.yml
applications/qc/tests/: conftest.py  test_annotation.py  test_focus.py
applications/translation/: README.md  pyproject.toml
applications/translation/tests/: conftest.py  test_engine.py  test_inference_reproducibility.py  test_training_integration.py
(+2990 files in other folders)
