[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "viscy"
description = "Virtual staining for microscopy - umbrella package"
readme = "README.md"
license = "BSD-3-Clause"
authors = [ { name = "Biohub", email = "compmicro@czbiohub.org" } ]
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dynamic = [ "version" ]
dependencies = [
  "viscy-transforms",
]

[dependency-groups]
dev = [ { include-group = "test" }, { include-group = "visual" } ]
test = [ "pytest>=9.0.2", "pytest-cov>=7" ]
visual = [
  "ipykernel>=7.1",
  "jupyter>=1.1.1",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = [ "src/viscy" ]

[tool.uv]
package = true

[tool.uv.workspace]
members = [ "packages/*" ]

[tool.uv.sources]
viscy-transforms = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4
src = [ "packages/*/src" ]

format.indent-style = "space"
format.quote-style = "double"
format.skip-magic-trailing-comma = false
format.docstring-code-format = true
lint.select = [ "D", "E", "F", "I", "NPY", "PD", "W" ]
lint.per-file-ignores."**/tests/**" = [ "D" ]
lint.per-file-ignores."__init__.py" = [ "D104", "F401" ]
lint.per-file-ignores."tests/**" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest]
minversion = "9.0"
testpaths = [ "packages/*/tests", "tests" ]
addopts = [ "-ra", "-q", "--import-mode=importlib" ]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"
