[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "viscy"
description = "Virtual staining for microscopy - umbrella package"
readme = "README.md"
keywords = [ "deep learning", "microscopy", "pytorch", "virtual staining" ]
license = "BSD-3-Clause"
authors = [ { name = "Biohub", email = "compmicro@czbiohub.org" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
]

dynamic = [ "version" ]
dependencies = [ "viscy-data", "viscy-models", "viscy-transforms", "viscy-utils" ]

urls.Homepage = "https://github.com/mehta-lab/VisCy"
urls.Issues = "https://github.com/mehta-lab/VisCy/issues"
urls.Repository = "https://github.com/mehta-lab/VisCy"

[dependency-groups]
dev = [ { include-group = "jupyter" }, { include-group = "test" } ]
test = [ "pytest>=9.0.2", "pytest-cov>=7" ]
jupyter = [ "ipykernel>=7.1", "jupyterlab>=4.5.3" ]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = [ "src/viscy" ]

[tool.uv]
package = true

[tool.uv.workspace]
members = [ "packages/*", "applications/*" ]

[tool.uv.sources]
viscy-data = { workspace = true }
viscy-models = { workspace = true }
viscy-transforms = { workspace = true }
viscy-utils = { workspace = true }
dynacrl = { workspace = true }

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4
src = [ "packages/*/src", "applications/*/src" ]

format.indent-style = "space"
format.quote-style = "double"
format.skip-magic-trailing-comma = false
format.docstring-code-format = true
lint.select = [ "D", "E", "F", "I", "NPY", "PD", "W" ]
lint.per-file-ignores."**/*.ipynb" = [ "D" ]
lint.per-file-ignores."**/__init__.py" = [ "D104", "F401" ]
lint.per-file-ignores."**/docs/**" = [ "I" ]
lint.per-file-ignores."**/tests/**" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest]
minversion = "9.0"
testpaths = [ "packages/*/tests", "applications/*/tests", "tests" ]
addopts = [ "-ra", "-q", "--import-mode=importlib" ]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"
