[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "viscy"
description = "Virtual staining for microscopy - umbrella package"
readme = "README.md"
keywords = [ "deep learning", "microscopy", "pytorch", "virtual staining" ]
license = "BSD-3-Clause"
authors = [ { name = "Biohub", email = "compmicro@czbiohub.org" } ]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
]

dynamic = [ "version" ]
dependencies = [ "viscy-data", "viscy-models", "viscy-transforms", "viscy-utils" ]

urls.Homepage = "https://github.com/mehta-lab/VisCy"
urls.Issues = "https://github.com/mehta-lab/VisCy/issues"
urls.Repository = "https://github.com/mehta-lab/VisCy"

[dependency-groups]
dev = [ { include-group = "jupyter" }, { include-group = "test" } ]
test = [ "pytest>=9.0.2", "pytest-cov>=7" ]
jupyter = [ "ipykernel>=7.1", "jupyterlab>=4.5.3" ]
doc = [
  "mike @ git+https://github.com/squidfunk/mike.git",
  "mkdocstrings-python",
  "zensical",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = [ "src/viscy" ]

[tool.uv]
package = true

[tool.uv.workspace]
members = [ "packages/*", "applications/*" ]
exclude = [ "applications/benchmarking" ]

[tool.uv.sources]
viscy-data = { workspace = true }
viscy-models = { workspace = true }
viscy-transforms = { workspace = true }
viscy-utils = { workspace = true }
dynaclr = { workspace = true }
cytoland = { workspace = true }
airtable-utils = { workspace = true }
viscy-qc = { workspace = true }
dynacell = { workspace = true }
# cubic 0.7.0a9 (GPU-resident Cellpose-SAM eval API + FSC/FRC NaN fix) is not on
# PyPI yet; pin the exact commit (reports 0.7.0a9, satisfies the ==0.7.0a9 pin).
cubic = { git = "https://github.com/alxndrkalinin/cubic.git", rev = "b84db9a" }
waveorder = { git = "https://github.com/mehta-lab/waveorder.git", branch = "main" }
aicssegmentation = { git = "https://github.com/alxndrkalinin/aics-segmentation.git", branch = "main" }
segmenter-model-zoo = { git = "https://github.com/alxndrkalinin/segmenter_model_zoo.git", branch = "main" }
aicsmlsegment = { git = "https://github.com/alxndrkalinin/aics-ml-segmentation.git", branch = "main" }
# RAPIDS publishes cucim's CUDA-13 wheels only to the NVIDIA index (the PyPI
# cucim-cu13 entry is an sdist stub with no binary wheel); pull it from there.
cucim-cu13 = { index = "nvidia" }

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
src = [ "applications/*/src", "packages/*/src" ]

format.indent-style = "space"
format.quote-style = "double"
format.skip-magic-trailing-comma = false
format.docstring-code-line-length = "dynamic"
format.docstring-code-format = true
lint.select = [ "D", "E", "F", "I", "NPY", "PD", "W" ]
lint.per-file-ignores."**/*.ipynb" = [ "D", "E402", "E501", "PD" ]
lint.per-file-ignores."**/__init__.py" = [ "D104", "F401" ]
lint.per-file-ignores."**/docs/**" = [ "I" ]
lint.per-file-ignores."**/evaluation/**" = [ "D", "E501", "NPY002", "PD011" ]
lint.per-file-ignores."**/examples/**" = [ "D", "E402", "E501", "F821" ]
lint.per-file-ignores."**/tests/**" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
minversion = "9.0"
testpaths = [ "packages/*/tests", "applications/*/tests" ]
addopts = [ "-ra", "-q", "--import-mode=importlib", "-m", "not slow" ]
pythonpath = [ "applications/dynacell/tools" ]
markers = [
  "slow: marks tests requiring GPU/HPC resources (deselect with -m 'not slow')",
]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"
