[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "dynacell"
description = "Benchmark virtual staining with UNetViT3D and FNet3D architectures"
readme = "README.md"
keywords = [
  "benchmarking",
  "deep learning",
  "microscopy",
  "virtual staining",
]
license = "BSD-3-Clause"
authors = [ { name = "Biohub", email = "compmicro@czbiohub.org" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dynamic = [ "version" ]
dependencies = [
  "lightning>=2.3",
  "monai",
  "omegaconf",
  "pydantic>=2",
  "viscy-data",
  "viscy-models[celldiff]",
  "viscy-transforms",
  "viscy-utils",
]
optional-dependencies.eval = [
  "accelerate>=1.13",
  "aicssegmentation",
  "cellpose",
  "cubic==0.7.0a2",
  "dynaclr",
  "hydra-core>=1.2",
  "iohub",
  "matplotlib",
  "microssim @ git+https://github.com/juglab/microssim.git@main",
  "pandas",
  "scikit-image",
  "scipy",
  "segmenter-model-zoo",
  "tqdm",
  "transformers",
]
optional-dependencies.preprocess = [
  "iohub",
  "tqdm",
]
optional-dependencies.report = [
  "hydra-core>=1.2",
  "matplotlib",
  "pandas",
]
urls.Homepage = "https://github.com/mehta-lab/VisCy"
urls.Issues = "https://github.com/mehta-lab/VisCy/issues"
urls.Repository = "https://github.com/mehta-lab/VisCy"

scripts.dynacell = "dynacell.__main__:main_cli"

[dependency-groups]
dev = [ { include-group = "test" } ]
test = [
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "tensorboard",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = [ "src/dynacell" ]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
pattern-prefix = "dynacell-"
fallback-version = "0.0.0"
