[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "dynaclr"
description = "DynaCLR: Self-supervised contrastive learning for cellular dynamics"
readme = "README.md"
keywords = [
  "contrastive learning",
  "deep learning",
  "microscopy",
  "self-supervised learning",
  "virtual staining",
]
license = "BSD-3-Clause"
authors = [ { name = "Biohub", email = "compmicro@czbiohub.org" } ]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dynamic = [ "version" ]
dependencies = [
  "click",
  "iohub>=0.3.5",
  "pytorch-metric-learning",
  "pyyaml",
  # seaborn and tabulate are required by core eval pipeline code that runs
  # unconditionally (evaluate_smoothness plots, compare_evals to_markdown,
  # mmd plotting). Hiding them under optional extras caused silent runtime
  # failures (SMOOTHNESS_GATHER discarding valid metrics when seaborn is
  # absent, compare_evals.py crashing on the markdown print). Promoted to
  # required deps 2026-05-05 after a SLURM job dropped these on a node
  # whose venv view was missing the extras.
  "seaborn",
  "tabulate",
  "torchvision",
  "viscy-data[triplet]",
  "viscy-models",
  "viscy-transforms",
  "viscy-utils[eval]",
]

optional-dependencies.eval = [
  "anndata",
  "dtaidistance",
  "natsort",
  "phate",
  "scikit-learn",
  "statsmodels",
  "umap-learn",
  "wandb",
]
optional-dependencies.tracking = [
  "gurobipy>=12.0.1,<13",
  "onnxruntime-gpu",
  "py-ctcmetrics",
  "tracksdata",
]
# Visualization extras: PCA-RGB timelapse MP4 export needs the FFmpeg
# plugin for imageio. Without it the timelapse CLI silently falls back
# to writing an animated GIF.
optional-dependencies.viz = [
  "imageio-ffmpeg",
  "matplotlib",
]
urls.Homepage = "https://github.com/mehta-lab/VisCy"
urls.Issues = "https://github.com/mehta-lab/VisCy/issues"
urls.Repository = "https://github.com/mehta-lab/VisCy"
scripts.dynaclr = "dynaclr.cli:main"

[dependency-groups]
dev = [ { include-group = "test" } ]
test = [
  "anndata",
  "pandas",
  "pytest>=9.0.2",
  "pytest-cov>=7",
  "statsmodels",
  "tensorboard",
  "tensorstore",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = [ "src/dynaclr" ]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
pattern-prefix = "dynaclr-"
fallback-version = "0.0.0"
