[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling", "uv-dynamic-versioning" ]

[project]
name = "qc"
description = "Quality control metrics for OME-Zarr microscopy datasets"
readme = "README.md"
keywords = [ "microscopy", "quality control", "zarr" ]
license = "BSD-3-Clause"
authors = [ { name = "Biohub", email = "compmicro@czbiohub.org" } ]
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dynamic = [ "version" ]
dependencies = [
  "airtable-utils",
  "click",
  "pydantic",
  "viscy-utils",
  "waveorder",
]

urls.Homepage = "https://github.com/mehta-lab/VisCy"
urls.Issues = "https://github.com/mehta-lab/VisCy/issues"
urls.Repository = "https://github.com/mehta-lab/VisCy"
scripts.qc = "qc.cli:main"

[dependency-groups]
dev = [ { include-group = "test" } ]
test = [
  "pytest>=9.0.2",
  "pytest-cov>=7",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = [ "src/qc" ]

[tool.uv.sources]
waveorder = { git = "https://github.com/mehta-lab/waveorder.git", branch = "main" }

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
pattern-prefix = "qc-"
fallback-version = "0.0.0"
